--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/index.js"
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "novaxjs2": "^4.6.6"
+    "novaxjs2": "^4.6.7"
   }
 }
